# local_chatbot

./: .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
chat/: chat.py
local_chatbot/webchat/: main.py
