[tool.poetry]
name = "local_chatbot"
version = "0.1.0"
description = "a ChatGPT style interface for a local LLM."
authors = ["brajajain <b.rajan.jain@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.3, <4.0"
chainlit = "^1.0.200"
litellm = "^1.22.3"
langchain = "^0.1.5"
langchain-community = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"